--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT= 45467
-MONGODBURL= 'mongodb://127.0.0.1:27017/SDP'
+PORT= 51235
+MONGODBURL= 'mongodb://127.0.0.1:27017/qrpay'
 SECRET_KEY_FOR_TOKEN= '55h2fd52jh52fsd52hjk5235%^^&&^'
