--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT= 51235
 MONGODBURL= 'mongodb://127.0.0.1:27017/qrpay'
 SECRET_KEY_FOR_TOKEN= '55h2fd52jh52fsd52hjk5235%^^&&^'
+EMAIL_SENDER='payqr78@gmail.com'
+EMAIL_PASSWORD='xntebjmdwwbwgfcz'
