--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "homepage": "https://github.com/bibash44/QRpaymentBackend#readme",
   "dependencies": {
+    "@vonage/server-sdk": "^2.11.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.7"
+    "mongoose": "^6.6.7",
+    "nodemailer": "^6.8.0"
   }
 }
