--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT= 51235
-MONGODBURL= 'mongodb://127.0.0.1:27017/qrpay'
+# MONGODBURL= 'mongodb://127.0.0.1:27017/qrpay'
+MONGODBURL=  'mongodb+srv://bib4sh:Bibash@cluster0.8y79ias.mongodb.net/qrpay'
 SECRET_KEY_FOR_TOKEN= '55h2fd52jh52fsd52hjk5235%^^&&^'
 EMAIL_SENDER='payqr78@gmail.com'
 EMAIL_PASSWORD='xntebjmdwwbwgfcz'
