--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --recursive --exit --timeout 3000",
     "start": "node server.js"
   },
   "repository": {
@@ -19,14 +19,18 @@
   "homepage": "https://github.com/bibash44/QRpaymentBackend#readme",
   "dependencies": {
     "@vonage/server-sdk": "^2.11.2",
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^10.1.0",
     "mongoose": "^6.6.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0"
+   
   }
 }
